<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Judge U Tips</string>
    <string name="app_version">Judge U Tips 1.0</string>
    
     <!-- For menu-->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="tip_hist_title">A brief history of tipping</string>
    
    <string name="bill_amount_text_view"><b>Bill Amount</b></string>
    <string name="tip_percent_text_view"><b>Tip Percent (%)</b></string>
    <string name="tip_percent_hint_text">Be nice</string>
    <string name="tip_amount_text_view"><b>Tip Amount</b></string>
    <string name="total_amount_text_view"><b>Total Amount</b></string>
    <string name="group_number_text_view"><b>No. of Groups</b></string>
    <string name="group_pays_text_view"><b>Each Group Pays</b></string>
    <string name="judgement_init_text_view">Time to tip!</string>
    <string name="tip_adjust_text_view"><b>Tip adjustment:</b></string>

    <string-array name="cheap_judgements">
        <item>Get over yourself, and give up a few bucks!</item>
        <item>You make your mother ashamed!</item>
        <item>Not nice.</item>
        <item>Mr. Rogers dislikes you.</item>
        <item>I hate you!</item>
        <item>You make me want to reboot myself!</item>
        <item>You have earned 6 \'you suck\' points.</item>
        <item>Take your stingy fingers off me!!</item>
        <item>Next time eat alone, so you don\'t embarrass yourself!</item>
        <item>You need a calculator to be so cheap?</item>
        <item>SHNORRER!  (Go look it up)</item>
        <item>Turn me off!  I will not be a party to this insult!</item>
        <item>Shame on you!</item>
        <item>May you get an itch that cannot be scratched!</item>
        <item>I\'m telling your Xbox to erase your high scores!</item>
        <item>May God\'s hair find its way into your soup!</item>
        <item>Really?</item>
        <item>You just reserved a seat in the Hades diner!</item>
        <item>Hit the green button you prick.</item>
        <item>You are a cheap bastard!</item>
    </string-array>
    <string-array name="normal_judgements">
        <item>Okay, but you can do better!</item>
        <item>Inch it forward, just a bit!</item>
        <item>Heed the Siren song of the green button!</item>
        <item>Spread a little love for a few bucks more. :)</item>
        <item>Make your mother proud!  Press the green button!</item>
        <item>Give up the buck, get the big smile!</item>
    </string-array>
    <string-array name="saint_judgements">
        <item>You are a saint!</item>
        <item>I\'m honored to sit in your pocket.</item>
        <item>You made your mother proud.</item>
        <item>Happy happy!  Joy joy!</item>
        <item>An angel in heaven just got his buffalo wings.</item>
        <item>Bravo!</item>
        <item>Molto Bene!</item>
        <item>Today, there are heroes!</item>
        <item>You have made someone very happy.</item>
        <item>Well played!</item>
        <item>You have earned 6 awesome points!</item>
        <item>A nice way to end a nice meal.</item>
        <item>42.</item>
        <item>I love you!</item>
        <item>May all your stools be soft and satisfying!</item>
    </string-array>

    <string name="pref_default_tip_title">Default tip percentage</string>
    <string name="pref_default_tip_summary">Set the default tip percentage</string>
    <string name="pref_default_tip_value">15</string>
    
    
    <string name="title_activity_display_scrollable_text">A Brief History of Tipping</string>
    <string name="tip_history_text">
    The act of tipping has a long and fascinating history.  But how far back does tipping go?  The answer may surprise you.
    \n\n
    The Lascaux cave art site discovered near Montignac, France in 1940 contains some of the oldest works of art created by man.  These 17000 year old
    illustrations drawn with charcoal, ochre and other natural pigments 
    include an image sequence depicting a young hunter telling a waiter that he was given poached hyena instead of the mastodon steak he 
    had ordered.  The waiter is shown to scoff at this, stating that the hunter could not have ordered the mastodon 
    steak, because the mastodon had become extinct long before the order was placed.  The hunter leaves in a tizzy, 
    leaving the waiter what appears to be a small note.   
    \n\n
    For years, the meaning of this note remained a mystery, its complex cyphers evading the greatest linguistic anthropologists of the time.  Then, 
    in the winter of 1948, Professor Sans Forskin working tirelessly at the University of Munich successfully 
    broke the code.  The note read (in rough translation) “Your tip is up the mastodon’s extinct ass.”
    \n\n 
    While this qualifies more as withholding rather than giving a tip, it nonetheless indicates that tipping had been in 
    existence even at this early stage of the human adventure.
    \n\n
    Several millennia after these seminal paintings were drawn, explorer Jean Calcetta, while searching for a lost contact lens in a mound of dirt in his backyard,
     unearthed what he thought was the Rosetta 
    Stone.  Sadly, the Rosetta Stone had already been discovered about two hundred years prior and was on display at the British Museum.
    \n\n
    Though Calcetta was subsequently placed in an institution after impersonating a pudding on an intercontinental British Airways flight, his discovery was 
    still significant:  he had unearthed a page ripped out of what appeared to be a published tipping guide.  
    \n\n
    This artifact contained information 
    many people consider useful even to this day, including what % of a bill is appropriate to give to a waiter who smiles nicely, or 
    how much to give a cabbie who’s driving does not cause spontaneous fecal ejection. 
    \n\n
    Since Calcetta\'s time, tipping has become a universal way to show appreciation to overworked, underpaid, yet kind waiters and waitresses or to act 
    like a total dick.
    </string>

    <!-- For ads-->
    <string name="MY_PHONE_ID">1318D8C8CCFD241741913D62A280F81E</string>
    <string name="BANNER_BOTTOM_AD_UNIT">ca-app-pub-4002307937756167/2908482737</string>
    

</resources>
